# levin

./: .gitignore  ASSESSMENT_SUMMARY.md  CLAUDE.md  Dockerfile  FEATURE_DEMO_MODEL_AVAILABILITY.md  Install Yahoo Extension.command  README.md  pyproject.toml
.cursor/: hooks.json
data-notes-demo/: active_session.json
docs/: CHAT_AUTOMATION.md  DEPRECATED_DASHBOARD_MODEL_STATUS.md  FLYLEAF_QA_BUGS.md  MESSENGER_INTEGRATION.md  MODEL_PIPELINE_ASSESSMENT.md  MODEL_PIPELINE_IMPLEMENTATION.md  MODEL_PIPELINE_MOCKUPS.md  PROJECT_STATUS.md  TAGGING_SCHEME.md  external-notes-sync.md  openclaw-cron-morning-yf.md
messenger/: .dockerignore  Dockerfile  README.md  __init__.py  __main__.py  agent_hooks.py  app.py  auth.py  companion.py  companion_app.py  db.py  deps.py  emailer.py  fly.toml  layer_catalog.py  model_link.py  qwen_gateway.py  requirements.txt  scheduler.py  secrets_crypto.py  settings_models.py  specialist_room.py  tenancy.py
scripts/: com.flyleaf.companion.plist.template  install_companion_launchagent.sh  secure_qwen_tunnel.sh  start_companion.sh
templates/: morning_yf_scan.json
tests/: test_account_settings_ui.py  test_actionable.py  test_arena.py  test_ask_labels.py  test_browser_yahoo.py  test_chat_mining.py  test_classify.py  test_classify_export.py  test_classify_pending.py  test_durable_tunnel.py  test_file_search.py  test_finance_research.py  test_friend_qwen_research.py  test_install_extension.py  test_label_corrections.py  test_label_suggest.py  test_labels.py  test_ledger.py  test_messenger_bridge.py  test_messenger_clear.py  test_messenger_sync.py  (+19 more)
(+90 files in other folders)
