[project]
name = "analyst-ledger"
version = "0.1.0"
description = "Local-first workflow capture for hedge-fund research sessions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
analyst = "analyst_ledger.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
